--- a/.config/i3/config
+++ b/.config/i3/config
@@ -17,7 +17,7 @@ set $mod Mod4
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:Cascadia Code 10
+font pango:Cascadia Code 13
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -34,8 +34,11 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
-# TODO: Update to Pipewire
+# Start udiskie application for automounting usb storages
+exec --no-startup-id udiskie
+
 # Use pactl to adjust volume in PulseAudio.
+exec --no-startup-id volumeicon
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
@@ -64,8 +67,10 @@ exec_always --no-startup-id "feh --slideshow-delay 3600 --bg-center --randomize 
 
 # start an applications
 bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+F2 exec firefox
+bindsym $mod+F2 exec brave
 bindsym $mod+F3 exec alacritty --class ranger -e ranger
+bindsym $mod+F4 exec obsidian
+bindsym $mod+F9 exec thunderbird
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -125,7 +130,7 @@ bindsym $mod+a focus parent
 set $ws1 "1: Terminal"
 set $ws2 "2: Browser"
 set $ws3 "3: Files"
-set $ws4 "4: Misc"
+set $ws4 "4: Obsidian"
 set $ws5 "5: Misc"
 set $ws6 "6: Misc"
 set $ws7 "7: Misc"
@@ -156,10 +161,10 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 
 # Open applications on specific workspaces
 #$ assign [class="(?i)firefox"]   		$ws2
-for_window [class="firefox"] move to workspace $ws2
+for_window [class="(?i)brave"] move to workspace $ws2
 for_window [class="ranger"] move to workspace $ws3
-for_window [class="thunderbird"] move to workspace $ws3
-assign [class="(?i)thunderbird"]   	$ws9
+for_window [class="obsidian"] move to workspace $ws3
+for_window [class="thunderbird"] move to workspace $ws9
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
