--- a/.config/i3status/i3status.conf
+++ b/.config/i3status/i3status.conf
@@ -16,6 +16,7 @@ order += "disk /"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "memory"
+order += "battery 0"
 order += "tztime local"
 
 cpu_usage {
@@ -44,6 +45,16 @@ memory {
         format = "%used | %available"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
+}
+
+battery 0 {
+       format = "%status %percentage %remaining %emptytime"
+       format_down = "No battery"
+       status_chr = "󰂄"
+       status_bat = "󰁾"
+       status_full = "󰁹"
+       path = "/sys/class/power_supply/BAT%d/uevent"
+       low_threshold = 10
 }
 
 tztime local {
