--- a/.config/i3/config
+++ b/.config/i3/config
@@ -37,6 +37,9 @@ exec --no-startup-id nm-applet
 # Start udiskie application for automounting usb storages
 exec --no-startup-id udiskie
 
+# Start authentication agent
+exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+
 # Use pactl to adjust volume in PulseAudio.
 exec --no-startup-id volumeicon
 set $refresh_i3status killall -SIGUSR1 i3status
