--- a/.config/i3/config
+++ b/.config/i3/config
@@ -66,7 +66,7 @@ bindsym $mod+0 exec "sh $HOME/.config/rofi/bin/powermenu"
 # Start the picom compositor
 exec_always --no-startup-id picom --config ~/.config/picom/picom.conf -b
 # Set backround image (tandomiz each time and every hour change image)
-exec_always --no-startup-id "feh --slideshow-delay 3600 --bg-center --randomize ~/Pictures/*"
+exec_always --no-startup-id "feh --bg-center ~/Pictures/wallhaven-nm1kl8.jpg"
 
 # start an applications
 bindsym $mod+Return exec i3-sensible-terminal
