--- a/.config/i3/config
+++ b/.config/i3/config
@@ -27,9 +27,6 @@ exec --no-startup-id dex --autostart --environment i3
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
-# Launch the main polybar
-exec_always --no_startup_id ~/.config/polybar/launch.sh
-
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
@@ -40,11 +37,10 @@ exec --no-startup-id udiskie
 # Start authentication agent
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
-# Kill polybar
-exec_always --no-startup-id killall -SIGUSR1 polybar
+# Launch the main polybar
+exec_always ~/.config/polybar/launch.sh
 
 # Use pactl to adjust volume in PulseAudio.
-exec --no-startup-id volumeicon
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
