--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -52,7 +52,7 @@ separator-foreground = ${colors.disabled}
 font-0 = cascadia-code:size=12;2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date systray 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
