--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,13 +1,3 @@
-#
-# Example .tmux.conf
-#
-# By Nicholas Marriott. Public domain.
-#
-
-# Some tweaks to the status line
-set -g status-right "%H:%M"
-set -g window-status-current-style "underscore"
-
 # If running inside tmux ($TMUX is set), then change the status line to red
 %if #{TMUX}
 set -g status-bg red
@@ -19,53 +9,78 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 # May work better.
 #set -sg terminal-overrides ",*:RGB"
 
-# No bells at all
+# don't do anything when a 'bell' rings
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
 set -g bell-action none
 
 # Keep windows around after they exit
 set -g remain-on-exit on
 
-# Change the prefix key to C-a
-set -g prefix C-a
+# Change the prefix key from C-b to C-a
 unbind C-b
-bind C-a send-prefix
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# Split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
+# Reload config file 
+bind r source-file ~/.config/tmux/tmux.conf
+
+# Switch panes using Alt-h/j/k/l
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
 
 # Turn the mouse on, but without copy mode dragging
 set -g mouse on
 unbind -n MouseDrag1Pane
 unbind -Tcopy-mode MouseDrag1Pane
 
-# Some extra key bindings to select higher numbered windows
-bind F1 selectw -t:10
-bind F2 selectw -t:11
-bind F3 selectw -t:12
-bind F4 selectw -t:13
-bind F5 selectw -t:14
-bind F6 selectw -t:15
-bind F7 selectw -t:16
-bind F8 selectw -t:17
-bind F9 selectw -t:18
-bind F10 selectw -t:19
-bind F11 selectw -t:20
-bind F12 selectw -t:21
+# Don't rename windows automatically
+set-option -g allow-rename off
 
 # A key to toggle between smallest and largest sizes if a window is visible in
 # multiple places
 bind F set -w window-size
 
-# Keys to toggle monitoring activity in a window and the synchronize-panes option
-bind m set monitor-activity
-bind y set synchronize-panes\; display 'synchronize-panes #{?synchronize-panes,on,off}'
+# Some tweaks to the status line
+# set -g status-right "%H:%M"
+# set -g window-status-current-style "underscore"
 
-# Create a single default session - because a session is created here, tmux
-# should be started with "tmux attach" rather than "tmux new"
-new -d -s0 -nirssi 'exec irssi'
-set -t0:0 monitor-activity on
-set -t0:0 aggressive-resize on
-neww -d -ntodo 'exec emacs ~/TODO'
-setw -t0:1 aggressive-resize on
-neww -d -nmutt 'exec mutt'
-setw -t0:2 aggressive-resize on
-neww -d
-neww -d
-neww -d
+# clock mode
+setw -g clock-mode-colour colour1
+
+# copy mode
+setw -g mode-style 'fg=colour1 bg=colour18 bold'
+
+# pane borders
+set -g pane-border-style 'fg=colour1'
+set -g pane-active-border-style 'fg=colour3'
+
+# statusbar
+set -g status-position bottom
+set -g status-justify left
+set -g status-style 'fg=colour1'
+set -g status-left ''
+set -g status-right '%Y-%m-%d %H:%M '
+set -g status-right-length 50
+set -g status-left-length 10
+
+setw -g window-status-current-style 'fg=colour0 bg=colour1 bold'
+setw -g window-status-current-format ' #I #W #F '
+
+setw -g window-status-style 'fg=colour1 dim'
+setw -g window-status-format ' #I #[fg=colour7]#W #[fg=colour1]#F '
+
+setw -g window-status-bell-style 'fg=colour2 bg=colour1 bold'
+
+# messages
+set -g message-style 'fg=colour2 bg=colour0 bold'
