--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -16,6 +16,9 @@ set -g visual-silence off
 setw -g monitor-activity off
 set -g bell-action none
 
+# Set escape time for neovim
+set-option -sg escape-time 10
+
 # Keep windows around after they exit
 set -g remain-on-exit on
 
