--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -52,7 +52,7 @@ separator-foreground = ${colors.disabled}
 font-0 = cascadia-code:size=12;2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date systray 
+modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth battery date systray 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -159,6 +159,20 @@ label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
 inherit = network-base
 interface-type = wired
 label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+
+[module/battery]
+type = internal/battery
+poll-interval = 5
+
+full-at = 99
+low-at = 15
+battery = BAT0
+adapter = ADP1
+
+label-charging = %{F#F0C674}POW%{F-} %percentage%%
+label-discharging = %{F#F0C674}BAT%{F-} %percentage%%
+label-full = Fully charged
+label-low = BATTERY LOW
 
 [module/date]
 type = internal/date
