--- a/.config/i3/config
+++ b/.config/i3/config
@@ -77,7 +77,7 @@ exec_always --no-startup-id "feh --bg-center ~/Pictures/wallhaven-nm1kl8.jpg"
 # start an applications
 bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+F2 exec brave
-bindsym $mod+F3 exec alacritty --class ranger -e ranger
+bindsym $mod+F3 exec kitty --class ranger -e ranger
 bindsym $mod+F4 exec obsidian
 bindsym $mod+F9 exec thunderbird
 
