--- a/.config/i3/config
+++ b/.config/i3/config
@@ -77,7 +77,7 @@ exec_always --no-startup-id "feh --bg-center ~/Pictures/wallhaven-nm1kl8.jpg"
 # start an applications
 bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+F2 exec brave
-bindsym $mod+F3 exec kitty --class ranger -e ranger
+bindsym $mod+F3 exec kitty --class yazi -e yazi
 bindsym $mod+F4 exec obsidian
 bindsym $mod+F9 exec thunderbird
 
@@ -171,7 +171,7 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 # Open applications on specific workspaces
 #$ assign [class="(?i)firefox"]   		$ws2
 for_window [class="(?i)brave"] move to workspace $ws2
-for_window [class="ranger"] move to workspace $ws3
+for_window [class="yazi"] move to workspace $ws3
 for_window [class="obsidian"] move to workspace $ws4
 for_window [class="thunderbird"] move to workspace $ws9
 
