--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -33,14 +33,27 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+# Switch windows using 
+unbind n  #DEFAULT KEY: Move to next window
+unbind w  #DEFAULT KEY: change current window interactively
+
+bind n command-prompt "rename-window '%%'"
+bind w new-window -c "#{pane_current_path}"
+
+set -g base-index 1
+set-window-option -g pane-base-index 1
+
+bind -n M-h previous-window
+bind -n M-l next-window
+
 # Reload config file 
 bind r source-file ~/.config/tmux/tmux.conf
 
 # Switch panes using Alt-h/j/k/l
-bind -n M-h select-pane -L
-bind -n M-l select-pane -R
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
+bind -n C-h select-pane -L
+bind -n C-l select-pane -R
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
 
 # Turn the mouse on, but without copy mode dragging
 set -g mouse on
